Changed banner picture and style

--- a/whatsnew.html
+++ b/whatsnew.html
@@ -2,14 +2,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Making Memories</title>
+    <title>Making Memories - Whats New</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
     <link rel="stylesheet" href="custom.css" />
   </head>
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
-      <h1 class="display-4">Making Memories at the Ledges</h1>
-      <h2 class="display-6">The Best Thing about Memories is Making Them!!</h2><br><br><br><br><br><br><br><br><br><br>
+      <h1 class="display-4" style="border-bottom:10px double orange;">Making Memories at the Ledges</h1>
+      <h2 class="display-6">The Best Thing about Memories is Making Them!!</h2>
+      <h2 class="display-6">-While visiting St George Utah-</h2><br><br><br><br><br><br><br><br><br>
 
       <div class="banner-logo">
         <!-- <img src="images/D15WGR-logo.png"> -->
