--- a/activities.html
+++ b/activities.html
@@ -43,29 +43,29 @@
 
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/HappyPeople.jpg" class="img-fluid" alt="high five" style="width:250px; height:160px;">
+          <img src="images/snowcanyon.jpg" class="img-fluid" alt="high five" style="width:250px; height:160px;">
           <p class="mt-1 small"><a href="cat-ment-emo.html">Snow Canyon State Park</a></p>
         </div>
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/ppp.jpg" class="img-fluid" alt="check list" style="width:250px; height:160px;">
+          <img src="images/zionnationalpark.jpg" class="img-fluid" alt="check list" style="width:250px; height:160px;">
           <p class="mt-1 small"><a href="cat-predisasterplan.html">Zions National Park</a></p>
         </div>
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/assistance.jpg" class="img-fluid" alt="help up" style="width:250px; height:160px;">
-          <p class="mt-1 small"><a href="cat-coming-soon.html">Bryce Canyon NAtional Park</a></p>
+          <img src="images/brycecanyonnp.jpg" class="img-fluid" alt="help up" style="width:250px; height:160px;">
+          <p class="mt-1 small"><a href="cat-coming-soon.html">Bryce Canyon National Park</a></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/gas.jpg" class="img-fluid" alt="gas range" style="width:250px; height:160px;">
+          <img src="images/capitalreefnp.jpg" class="img-fluid" alt="gas range" style="width:250px; height:160px;">
           <p class="mt-1 small"><a href="cat-coming-soon.html">Capital Reef National Park</a></p>
         </div>
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/water.jpg" class="img-fluid" alt="drink water" style="width:250px; height:160px;">
+          <img src="images/greatbasinnp.jpg" class="img-fluid" alt="drink water" style="width:250px; height:160px;">
           <p class="mt-1 small"><a href="cat-coming-soon.html">Great Basin National Park</a></p>
         </div>
         <div class="col-md-4 mb-4 mb-md-0">
-          <img src="images/beans.jpg" class="img-fluid" alt="beans" style="width:250px; height:160px;">
+          <img src="images/tonaquintnature.jpg" class="img-fluid" alt="beans" style="width:250px; height:160px;">
           <p class="mt-1 small"><a href="cat-coming-soon.html">Tonaquint Nature Center</a></p>
         </div>
       </div>
