--- a/about.html
+++ b/about.html
@@ -46,14 +46,14 @@
           <div class="card-header" id="headingOne">
             <h2 class="mb-0">
               <!-- <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-                About D15W Get Ready
+                About Making Memories vacation condo at Ledges St George Utah
               </button>
             </h2>
           </div>
 
           <!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">-->
             <div class="card-body">
-              <p>The information on this website is for the neighbors living in the Draper 15th Ward boundries.</p>
+              <p>We hope you enjoy your stay at our place.</p>
             </div>
           </div>
         </div>
