--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
       <h1 class="display-4" style="border-bottom:10px double orange;">Making Memories at the Ledges</h1>
       <h2 class="display-6">The Best Thing about Memories is Making Them!!</h2>
-      <h2 class="display-6">-While visiting St George Utah-</h2><br><br><br><br><br><br><br><br><br>
+      <h2 class="display-6">-St George Utah-</h2><br><br><br><br><br><br><br><br><br>
 
       <div class="banner-logo">
         <!-- <img src="images/D15WGR-logo.png"> -->
