--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul>Bedroom 4 (unenclosed loft) - Two twin over full Bunkbeds and Twin Trundle</ul></p>
             <br>
           
-          <a href="https://www.ledgesvacationrentals.com/vacation-rentals/rental/2051-208278/" class="btn btn-primary btn-lg">Book Now at Ledges Vacation Rentals</a><hr>
+          
         </div>  
         <div class="col-sm-1"></div>
         <div class="col-sm-4"><br><br>
@@ -76,6 +76,7 @@
           <p>Great Room, Dining and Kitchen</p>
           <img src="images/MMfamilyroom.jpg" class="img-fluid" alt="high five" href="https://www.ledgesvacationrentals.com/vacation-rentals/rental/2051-208278/#rtgallery-1">
           <!-- <a href="https://mailchi.mp/3f1c085f8ad8/d15wgetready" class="btn btn-primary btn-md">Subscribe</a> -->
+          <a href="https://www.ledgesvacationrentals.com/vacation-rentals/rental/2051-208278/" class="btn btn-primary btn-md">Book Now at Ledges Vacation Rentals</a><hr>
         </div>
         </div>
       </div>
