--- a/checklists.html
+++ b/checklists.html
@@ -11,10 +11,6 @@
       <h1 class="display-4" style="border-bottom:10px double orange;">Making Memories at the Ledges</h1>
       <h2 class="display-6">The Best Thing about Memories is Making Them!!</h2>
       <h2 class="display-6">-While visiting St George Utah-</h2><br><br><br><br><br><br><br><br><br>
-
-      <div class="banner-logo">
-        <!-- <img src="images/D15WGR-logo.png"> -->
-      </div>
     </div>
 
     <div class="container my-custom-container pt-3">
@@ -23,9 +19,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="pastnewsletters.html">Newsletters</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="photos.html">Photos</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="activities.html">Activities</a>
           </li>
