--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making Memories</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous" />
-    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="stylesheet" href="custom.css">
   </head>
+  
   <body>
     <div class="my-bg-photo bg-secondary text-white py-5 text-center shadow">
       <h1 class="display-4" style="border-bottom:10px double orange;">Making Memories at the Ledges</h1>
       <h2 class="display-6">The Best Thing about Memories is Making Them!!</h2>
       <h2 class="display-6">-St George Utah-</h2><br><br><br><br><br><br><br><br><br>
-
-      <div class="banner-logo">
-        <!-- <img src="images/D15WGR-logo.png"> -->
-      </div>
     </div>
 
     <div class="container my-custom-container pt-3">
@@ -23,9 +21,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Home</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="pastnewsletters.html">Newsletters</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="photos.html">Photos</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="activities.html">Activities</a>
           </li>
